cargo-features = ["profile-overrides"]  # Enable the use of `[profile.dev.overrides]`

[workspace]

[profile.release]
debug = true
panic = "abort"
lto = true

[profile.dev.package]
# A software-based compositor (`swrast`) is used when other backends are not
# available for some reason. This is horrendously slow on debug builds and hurts
# developer experience. To mitigate this issue, always enable optimization for
# `tcw3_pal`. This isn't as fast as the release build due to lack of LTO, but
# at least it's usable.
tcw3_pal = { opt-level = 3 }

[package]
name = "tcw3_calc"
version = "0.1.0"
authors = ["tcpp"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcw3_calc_meta = { path = "meta" }
log = "0.4"

[dependencies.tcw3]
git = "https://github.com/yvt/Stella2.git"
rev = "509d6a965e4cf51777591de822ea15397f77f200"

[dependencies.simple_logger]
version = "1.3.0"
default-features = false
