[package]
name = "tcw3_calc_meta"
version = "0.1.0"
authors = ["tcpp"]
edition = "2018"

[build-dependencies.tcw3_designer]
git = "https://github.com/yvt/Stella2.git"
rev = "6c702eae26948b1b2d66081874734ddbea65eb23"

[build-dependencies.tcw3_meta]
git = "https://github.com/yvt/Stella2.git"
rev = "6c702eae26948b1b2d66081874734ddbea65eb23"

[lib]
path = "lib.rs"
