[package]
name = "tcw3_calc_meta"
version = "0.1.0"
authors = ["tcpp"]
edition = "2018"

[build-dependencies.tcw3_designer]
git = "https://github.com/yvt/Stella2.git"
rev = "5e84e84b625b2534c3b8e8a2809661499667cfe6"

[build-dependencies.tcw3_meta]
git = "https://github.com/yvt/Stella2.git"
rev = "5e84e84b625b2534c3b8e8a2809661499667cfe6"

[lib]
path = "lib.rs"
