[package]
name = "tcw3_calc_meta"
version = "0.1.0"
authors = ["tcpp"]
edition = "2018"

[build-dependencies.tcw3_designer]
git = "https://github.com/yvt/Stella2.git"
rev = "1913e5b728e902e1bc1b6c5d19045a2f02e974c9"

[build-dependencies.tcw3_meta]
git = "https://github.com/yvt/Stella2.git"
rev = "1913e5b728e902e1bc1b6c5d19045a2f02e974c9"

[lib]
path = "lib.rs"
